# world-forge

./: CHANGELOG.md  README.md  pyproject.toml
atlasmancer/: __init__.py  campaign_loader.py  cli.py  generator.py  i18n.py
atlasmancer/renderers/: __init__.py  campaign.py  html.py  png.py
docs/: ATLASMANCER_V0.2_SPEC.md  ATLASMANCER_V0.4_SPEC.md  ATLASMANCER_V0.5_SPEC.md  DECISIONS.md  DEPLOYMENT_STRATEGY.md  RENAME_PLAN.md  ROADMAP.md
examples/: example-campaign.json  example-en-gm.html  example-en-player.html  example-es-gm.html  example-es-player.html
locales/: en.json  es.json
scripts/: build_examples.py
tests/: test_campaign.py  test_campaign_loader.py  test_civilizations.py  test_examples.py  test_generator.py  test_geography.py  test_i18n.py  test_renderers.py
