[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasmancer"
version = "0.2.0"
description = "A free, open-source worldbuilding tool for tabletop campaigns."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "capfroggy" }
]
keywords = ["ascii", "worldbuilding", "procedural-generation", "cli", "terminal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: Utilities"
]
dependencies = []

[project.optional-dependencies]
image = ["pillow>=10,<13"]
dev = ["build", "coverage>=7,<8", "ruff", "tox>=4,<5"]

[project.urls]
Homepage = "https://Atlasmancer.gt.tc"
Repository = "https://github.com/capfroggy/atlasmancer"
Issues = "https://github.com/capfroggy/atlasmancer/issues"

[project.scripts]
atlasmancer = "atlasmancer.cli:main"

[tool.setuptools.packages.find]
include = ["atlasmancer*"]
